--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,10 +18,25 @@
 			]
 		},
 		{
+			"label": "build_debug",
+			"type": "shell",
+			"command": "make autojobs=true debug=true",
+			"problemMatcher": [
+				"$gcc"
+			]
+		},
+		{
 			"label": "run",
 			"type": "shell",
 			"command": "./build/sintezator",
 			"dependsOn": "build",
+			"problemMatcher": []
+		},
+		{
+			"label": "run_debug",
+			"type": "shell",
+			"command": "./build/sintezator",
+			"dependsOn": "build_debug",
 			"problemMatcher": []
 		}
 	]
